Moved files in to the root of the repo.

--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,39 @@
-dragons/.project
-dragons/.settings/
-dragons/android/.classpath
-dragons/android/.project
-dragons/android/.settings/
-dragons/android/target/
-dragons/core/.classpath
-dragons/core/.project
-dragons/core/.settings/
-dragons/core/target/
-dragons/flash/.classpath
-dragons/flash/.project
-dragons/flash/.settings/
-dragons/flash/target/
-dragons/html/.classpath
-dragons/html/.project
-dragons/html/.settings/
-dragons/html/.gwt/
-dragons/html/target/
-dragons/ios/.project
-dragons/ios/.settings/
-dragons/java/.classpath
-dragons/java/.project
-dragons/java/.settings/
-dragons/java/target/
+.project
+.settings/
+android/.classpath
+android/.project
+android/.settings/
+android/target/
+core/.classpath
+core/.project
+core/.settings/
+core/target/
+flash/.classpath
+flash/.project
+flash/.settings/
+flash/target/
+html/.classpath
+html/.project
+html/.settings/
+html/.gwt/
+html/target/
+ios/.project
+ios/.settings/
+java/.classpath
+java/.project
+java/.settings/
+java/target/
 
 .classpath
 .project
 .settings
-dragons/target
-dragons/android/target
-dragons/assets/target
-dragons/core/target
-dragons/flash/target
-dragons/html/target
-dragons/ios/target
-dragons/java/target
+target
+android/target
+assets/target
+core/target
+flash/target
+html/target
+ios/target
+java/target
 
 **/.DS_Store
