Updated html pom to support live reloading of deployed wars.

--- a/html/pom.xml
+++ b/html/pom.xml
@@ -117,6 +117,7 @@
           <webApp>
             ${project.basedir}/target/${project.artifactId}-${project.version}
           </webApp>
+          <scanIntervalSeconds>5</scanIntervalSeconds>
         </configuration>
         <executions>
           <execution>
