--- a/html/pom.xml
+++ b/html/pom.xml
@@ -88,6 +88,13 @@
       <version>${playn.version}</version>
       <classifier>sources</classifier>
     </dependency>
+
+    <dependency>
+      <groupId>com.allen-sauer.gwt.log</groupId>
+      <artifactId>gwt-log</artifactId>
+      <version>3.1.6</version>
+    </dependency>
+
   </dependencies>
 
   <build>
