--- a/core/pom.xml
+++ b/core/pom.xml
@@ -25,6 +25,12 @@
       <artifactId>migraine-core</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+    
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava-gwt</artifactId>
+      <version>15.0</version>
+    </dependency>
   </dependencies>
 
   <build>
