--- a/core/pom.xml
+++ b/core/pom.xml
@@ -31,6 +31,14 @@
       <artifactId>guava-gwt</artifactId>
       <version>15.0</version>
     </dependency>
+
+    <!-- needs extra dependencies: objenesis & hamcrest -->
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>  
+      <version>1.9.5</version> 
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
